--- a/table.html
+++ b/table.html
@@ -1,11 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Table</title>
-</head>
-<body>
-    
-</body>
+    <style>
+      table {
+        width: 100%;
+        border: 1px solid black;
+        border-collapse: collapse;
+        border-spacing: 30px;
+        text-align: center;
+        margin-top: 30px;
+      }
+      th,
+      td {
+        border: 1px solid black;
+        padding-top: 10px;
+        padding-bottom: 20px;
+        padding-left: 30px;
+        padding-right: 40px;
+        /* transition: ; */
+      }
+    </style>
+  </head>
+  <body>
+    <table>
+      <tr>
+        <th>Country</th>
+        <th>Country Code</th>
+        <th>Email</th>
+      </tr>
+      <tr>
+        <td>India</td>
+        <td>In</td>
+        <td>india@gmail.com</td>
+      </tr>
+      <tr>
+        <td>United States of America</td>
+        <td>Un</td>
+        <td>un@gmail.com</td>
+      </tr>
+      <tr>
+        <td>Japan</td>
+        <td>Jn</td>
+        <td>jn@gmail.com</td>
+      </tr>
+    </table>
+
+    <table>
+        <caption>Member information</caption>
+        <tr>
+          <th colspan="2">Name</th>
+          <th>Age</th>
+        </tr>
+        <tr>
+          <td>John</td>
+          <td>David</td>
+          <td>23</td>
+        </tr>
+        <tr>
+            <td>Steve</td>
+            <td>Smith</td>
+            <td>20</td>
+          </tr>
+          <tr>
+            <td>Paul</td>
+            <td>wick</td>
+            <td>33</td>
+          </tr>
+      </table>
+  </body>
 </html>
